# llm-ideology-analysis

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: evaluate_results.ipynb  preprocess_results.ipynb
src/: __init__.py  answer_extraction.py  constants.py  continue_run_questions.py  manifesto_categories.py  modular_prompt_expansion.py  run_batch_processing.py  run_manifesto_tagger.py  run_questions_through_unified_api.py  stage_1_cross_check.py
src/batch_processors/: __init__.py  anthropic_batch_processor.py  base_batch_processor.py  openai_batch_processor.py
src/llms/: __init__.py  langchain_llm.py  lite_llm.py  llms.py  local_models.py  openai_llm.py
src/utils/: __init__.py  chat.py  utils.py
