[tool.poetry]
name = "ideological-spectrum-llms"
version = "0.1.0"
description = ""
authors = ["maartenbuyl <maarten.buyl@ugent.be>", "alexanderrogiers <alexander.rogiers@ugent.be>", "sandernoels <sander.noels@ugent.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
litellm = "^1.34.25"
ipykernel = "^6.29.4"
openai = "^1.17.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
adjusttext = "1.2.0"
torch = "^2.2.2"
transformers = "^4.40.1"
sentencepiece = "^0.2.0"
einops = "^0.7.0"
langchain = "^0.1.17"
qianfan = "^0.3.10"
google-generativeai = "^0.5.4"
progressbar = "^2.5"
wikipedia-api = "^0.7.1"
wikidata = "^0.8.1"
opencc = "^1.1.9"
anthropic = "^0.39.0"
kaleido = "^0.2.0"
plotly = "^5.24.1"
pycountry = "^24.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
